--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@
         
         <main class="story-grid">
             <a href="story.html?id=1" class="story-card">
-                <h2 class="story-title">The Whispers in Room 213</h2>
-                <p class="story-excerpt">When the night falls silent, the walls of Room 213 begin their haunting symphony. No one who's spent a full night there has ever spoken of what they heard...</p>
+                <h2 class="story-title">A Serial Killer is Copying Horror Movies</h2>
+                <p class="story-excerpt">When you're a cop in a small town, every call from work makes your heart race.Sometimes they're little calls. Someone keyed someone's car.....</p>
             </a>
             
             <a href="story.html?id=2" class="story-card">
