--- a/create.html
+++ b/create.html
@@ -90,12 +90,21 @@
                 <input type="text" id="imageUrl" value="/api/placeholder/800/400">
             </div>
             <div class="form-group">
+                <label for="nextPart">Next Part:</label>
+                <input type="text" id="nextPart" value="2">
+            </div>
+            <div class="form-group">
+                <label for="previousPart">Previous Part:</label>
+                <input type="text" id="previousPart">
+            </div>
+            <div class="form-group">
                 <label for="content">Content:</label>
                 <div class="hint">Separate paragraphs with an empty line (double newline)</div>
                 <textarea id="content" required></textarea>
             </div>
             <button type="button" onclick="generateJSON()">Preview JSON</button>
             <button type="button" onclick="downloadJSON()">Download JSON</button>
+            <button type="button" onclick="copyJSON()">Copy JSON</button>
         </form>
         <div id="preview"></div>
     </div>
@@ -106,13 +115,18 @@
             // Split content by double newline and filter out empty paragraphs
             const content = contentText.split(/\n\s*\n/).filter(para => para.trim());
 
+            const nextPart = document.getElementById('nextPart').value;
+            const previousPart = document.getElementById('previousPart').value;
+
             return {
                 id: parseInt(document.getElementById('id').value),
                 title: document.getElementById('title').value,
                 author: document.getElementById('author').value,
                 date: document.getElementById('date').value,
                 imageUrl: document.getElementById('imageUrl').value,
-                content: content
+                content: content,
+                nextPart: nextPart || "2",
+                previousPart: previousPart || null
             };
         }
 
@@ -134,6 +148,17 @@
             URL.revokeObjectURL(url);
         }
 
+        function copyJSON() {
+            const data = getFormData();
+            const jsonString = JSON.stringify(data, null, 2);
+            navigator.clipboard.writeText(jsonString).then(() => {
+                alert('JSON copied to clipboard!');
+            }).catch(err => {
+                console.error('Failed to copy JSON:', err);
+                alert('Failed to copy JSON. Please try again.');
+            });
+        }
+
         // Initialize with example data
         window.onload = function() {
             document.getElementById('id').value = '1';
@@ -141,6 +166,8 @@
             document.getElementById('author').value = 'Sarah Blake';
             document.getElementById('date').value = '2024-10-31';
             document.getElementById('imageUrl').value = '/api/placeholder/800/400';
+            document.getElementById('nextPart').value = '2';
+            document.getElementById('previousPart').value = '';
             
             const exampleContent = `I never should have answered the door that night. The knocking started at exactly midnight - three sharp raps that echoed through my empty house. I thought it was strange, given that I lived miles from my nearest neighbor, but I convinced myself it must be someone in need of help.
 
