--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
     
     <div class="container">
         <header>
-            <h1>HORROR CHILLS</h1>
+            <h1>CHILLS</h1>
         </header>
         
         <main class="story-grid">
