--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+0<!DOCTYPE html>
 <html lang="en">
 <head>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1237614381130102"
@@ -434,7 +434,7 @@
                 <p class="story-excerpt">Every night, no matter the weather, something walks down our street whistling softly. You can only hear it if you’re in the living room or the kitchen when they walk by.....</p>
             </a>
 
-<a href="story.html?id=8" class="story-card">
+<a href="story.html?id=9" class="story-card">
                 <h2 class="story-title">The creepy urban legend of Kisaragi train station of Japan.</h2>
                 <p class="story-excerpt">It might just be my imagination, but do you mind if I talk.....</p>
 </a>
