--- a/index.html
+++ b/index.html
@@ -438,6 +438,11 @@
                 <h2 class="story-title">The creepy urban legend of Kisaragi train station of Japan.</h2>
                 <p class="story-excerpt">It might just be my imagination, but do you mind if I talk.....</p>
 </a>
+
+            <a href="story.html?id=10" class="story-card">
+                <h2 class="story-title">The last bus to Fragrant hill.</h2>
+                <p class="story-excerpt">The Bus no 375 incident took place on the night of 14 November 1995 in Beijing, China. The incident is also known as The Bus 375 Beijing....</p>
+            </a>
             
         </main>
     </div>
