--- a/index.html
+++ b/index.html
@@ -443,6 +443,11 @@
                 <h2 class="story-title">The last bus to Fragrant hill.</h2>
                 <p class="story-excerpt">The Bus no 375 incident took place on the night of 14 November 1995 in Beijing, China. The incident is also known as The Bus 375 Beijing....</p>
             </a>
+
+            <a href="story.html?id=11" class="story-card">
+                <h2 class="story-title">My wife came home late last night, but whatever that thing was on my security camera, it sure wasn't her.</h2>
+                <p class="story-excerpt">I'm writing this at my neighbor's house where we're currently waiting for the police. I suppose I'll tell them the same thing I told Jack when I came banging on his door this morning. I can't exactly tell them......</p>
+            </a>
             
         </main>
     </div>
