--- a/create.html
+++ b/create.html
@@ -3,179 +3,89 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Story Information Form</title>
-    <style>
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-            background-color: #f5f5f5;
-        }
-        .form-container {
-            background-color: white;
-            padding: 2rem;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        }
-        .form-group {
-            margin-bottom: 1rem;
-        }
-        label {
-            display: block;
-            margin-bottom: 0.5rem;
-            font-weight: bold;
-        }
-        input[type="text"],
-        input[type="date"],
-        textarea {
-            width: 100%;
-            padding: 0.5rem;
-            border: 1px solid #ddd;
-            border-radius: 4px;
-            margin-bottom: 0.5rem;
-        }
-        textarea {
-            height: 300px;
-            resize: vertical;
-        }
-        button {
-            background-color: #007bff;
-            color: white;
-            border: none;
-            padding: 0.5rem 1rem;
-            border-radius: 4px;
-            cursor: pointer;
-            margin-right: 0.5rem;
-        }
-        button:hover {
-            background-color: #0056b3;
-        }
-        #preview {
-            margin-top: 1rem;
-            padding: 1rem;
-            background-color: #f8f9fa;
-            border-radius: 4px;
-            white-space: pre-wrap;
-        }
-        .hint {
-            color: #666;
-            font-size: 0.9em;
-            margin-top: 0.25rem;
-        }
-    </style>
+    <title>Create Story JSON</title>
 </head>
 <body>
-    <div class="form-container">
-        <h1>Story Information Form</h1>
-        <form id="storyForm">
-            <div class="form-group">
-                <label for="id">ID:</label>
-                <input type="text" id="id" required>
-            </div>
-            <div class="form-group">
-                <label for="title">Title:</label>
-                <input type="text" id="title" required>
-            </div>
-            <div class="form-group">
-                <label for="author">Author:</label>
-                <input type="text" id="author" required>
-            </div>
-            <div class="form-group">
-                <label for="date">Date:</label>
-                <input type="date" id="date" required>
-            </div>
-            <div class="form-group">
-                <label for="imageUrl">Image URL:</label>
-                <input type="text" id="imageUrl" value="/api/placeholder/800/400">
-            </div>
-            <div class="form-group">
-                <label for="nextPart">Next Part:</label>
-                <input type="text" id="nextPart" value="2">
-            </div>
-            <div class="form-group">
-                <label for="previousPart">Previous Part:</label>
-                <input type="text" id="previousPart">
-            </div>
-            <div class="form-group">
-                <label for="content">Content:</label>
-                <div class="hint">Separate paragraphs with an empty line (double newline)</div>
-                <textarea id="content" required></textarea>
-            </div>
-            <button type="button" onclick="generateJSON()">Preview JSON</button>
-            <button type="button" onclick="downloadJSON()">Download JSON</button>
-            <button type="button" onclick="copyJSON()">Copy JSON</button>
-        </form>
-        <div id="preview"></div>
-    </div>
+    <h1>Create a New Story</h1>
+    <form id="storyForm">
+        <label for="title">Title:</label>
+        <input type="text" id="title" name="title" required><br><br>
+
+        <label for="author">Author:</label>
+        <input type="text" id="author" name="author" required><br><br>
+
+        <label for="date">Date:</label>
+        <input type="date" id="date" name="date" required><br><br>
+
+        <label for="imageUrl">Image URL:</label>
+        <input type="text" id="imageUrl" name="imageUrl"><br><br>
+
+        <label for="content">Content:</label><br>
+        <textarea id="content" name="content" rows="10" cols="50" required></textarea><br><br>
+
+        <label for="nextPart">Next Part (optional):</label>
+        <input type="number" id="nextPart" name="nextPart"><br><br>
+
+        <label for="previousPart">Previous Part (optional):</label>
+        <input type="number" id="previousPart" name="previousPart"><br><br>
+
+        <button type="button" onclick="createStoryJSON()">Create Story JSON</button>
+    </form>
 
     <script>
+        async function getLatestJSONNumber() {
+            const response = await fetch('/'); // Replace with your server's file listing endpoint if needed
+            const files = await response.text();
+
+            // Extract JSON files named s<number>.json and find the highest number
+            const regex = /s(\d+)\.json/g;
+            let match, maxNumber = 0;
+
+            while ((match = regex.exec(files)) !== null) {
+                maxNumber = Math.max(maxNumber, parseInt(match[1], 10));
+            }
+
+            return maxNumber;
+        }
+
+        async function createStoryJSON() {
+            const formData = getFormData();
+
+            const latestNumber = await getLatestJSONNumber();
+            const newNumber = latestNumber + 1;
+            const newFileName = `s${newNumber}.json`;
+
+            // Send data to the server to save as a new JSON file
+            const response = await fetch(`/save-json`, {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify({ fileName: newFileName, data: formData })
+            });
+
+            if (response.ok) {
+                alert(`New story created: ${newFileName}`);
+                location.reload();
+            } else {
+                alert('Failed to create new story JSON.');
+            }
+        }
+
         function getFormData() {
             const contentText = document.getElementById('content').value;
-            // Split content by double newline and filter out empty paragraphs
             const content = contentText.split(/\n\s*\n/).filter(para => para.trim());
 
             const nextPart = document.getElementById('nextPart').value;
             const previousPart = document.getElementById('previousPart').value;
 
             return {
-                id: parseInt(document.getElementById('id').value),
                 title: document.getElementById('title').value,
                 author: document.getElementById('author').value,
                 date: document.getElementById('date').value,
                 imageUrl: document.getElementById('imageUrl').value,
-                content: content,
-                nextPart: nextPart || "2",
-                previousPart: previousPart || null
+                content,
+                nextPart: nextPart ? parseInt(nextPart, 10) : null,
+                previousPart: previousPart ? parseInt(previousPart, 10) : null
             };
-        }
-
-        function generateJSON() {
-            const data = getFormData();
-            document.getElementById('preview').textContent = JSON.stringify(data, null, 2);
-        }
-
-        function downloadJSON() {
-            const data = getFormData();
-            const blob = new Blob([JSON.stringify(data, null, 2)], { type: 'application/json' });
-            const url = URL.createObjectURL(blob);
-            const a = document.createElement('a');
-            a.href = url;
-            a.download = 'story.json';
-            document.body.appendChild(a);
-            a.click();
-            document.body.removeChild(a);
-            URL.revokeObjectURL(url);
-        }
-
-        function copyJSON() {
-            const data = getFormData();
-            const jsonString = JSON.stringify(data, null, 2);
-            navigator.clipboard.writeText(jsonString).then(() => {
-                alert('JSON copied to clipboard!');
-            }).catch(err => {
-                console.error('Failed to copy JSON:', err);
-                alert('Failed to copy JSON. Please try again.');
-            });
-        }
-
-        // Initialize with example data
-        window.onload = function() {
-            document.getElementById('id').value = '1';
-            document.getElementById('title').value = 'The Midnight Visitor';
-            document.getElementById('author').value = 'Sarah Blake';
-            document.getElementById('date').value = '2024-10-31';
-            document.getElementById('imageUrl').value = '/api/placeholder/800/400';
-            document.getElementById('nextPart').value = '2';
-            document.getElementById('previousPart').value = '';
-            
-            const exampleContent = `I never should have answered the door that night. The knocking started at exactly midnight - three sharp raps that echoed through my empty house. I thought it was strange, given that I lived miles from my nearest neighbor, but I convinced myself it must be someone in need of help.
-
-As I approached the door, the temperature seemed to drop with each step. The brass doorknob felt like ice against my palm. When I finally worked up the courage to open it, what I saw made my blood run cold.
-
-There, illuminated by the pale moonlight, stood a figure wearing my face.`;
-            
-            document.getElementById('content').value = exampleContent;
         }
     </script>
 </body>
